ansible-playbook-deploy/main.tf
provider "aws" {
  region = "us-east-1"
}

locals {
  vpc_id           = "vpc-00cbdd9d14ccbc690"
  subnet_id        = "subnet-0706c0d7c5b09a8eb"
  ssh_user         = "ubuntu"
  key_name         = "victor-aws"
  private_key_path = "~/victor-aws.pem"
}



resource "aws_security_group" "nginx" {
  name   = "nginx_access"
  vpc_id = local.vpc_id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_instance" "nginx" {
  ami                         = "ami-0885b1f6bd170450c"
  subnet_id                   = "subnet-0706c0d7c5b09a8eb"
  instance_type               = "t2.micro"
  associate_public_ip_address = true
  security_groups             = [aws_security_group.nginx.id]
  key_name                    = local.key_name

  provisioner "remote-exec" {
    inline = ["echo 'Wait until SSH is ready'"]

    connection {
      type        = "ssh"
      user        = local.ssh_user
      private_key = file(local.private_key_path)
      host        = aws_instance.nginx.public_ip
    }
  }
  provisioner "local-exec" {
    command = "ansible-playbook -i ${aws_instance.nginx.public_ip}, --private-key ${local.private_key_path} site.yaml"
  }
}

output "nginx_ip" {
  value = aws_instance.nginx.public_ip
}
